force-app/main/default/objects/sf_devops__Apex_Hash__c/sf_devops__Apex_Hash__c.object-meta.xml
<CustomObject>
    <description>Hash that determines whether apex classes have changed</description>
    <label>Apex Hash</label>
    <nameField>
        <label>Apex Hash Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Apex Hashes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>