force-app/main/default/objects/sf_devops__Apex_Hash__c/fields/sf_devops__Hash_Value__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Hash_Value__c</fullName>
    <label>Hash Value</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>