force-app/main/default/objects/sf_devops__Apex_Hash__c/fields/sf_devops__Test_Provider__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Test_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Provider</label>
    <referenceTo>sf_devops__Test_Provider__c</referenceTo>
    <relationshipLabel>Apex Hashes</relationshipLabel>
    <relationshipName>Apex_Hashes</relationshipName>
    <type>Lookup</type>
</CustomField>